--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = megaatmega2560
+default_envs = teensy2pp
 
 [common]
 default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
@@ -44,7 +44,15 @@ lib_deps =
 #   build for a given board.    #
 #                               #
 #################################
+[env:teensy2pp]
+platform = teensy
+board = teensy2pp
 
+; change microcontroller
+board_build.mcu = at90usb1286
+
+; change MCU frequency
+board_build.f_cpu = 16000000L
 #
 # ATmega2560
 #
